implemented get task handler.
- also updated requests.http file to include current requests.
