# rest-api/docs/swagger.yaml
@@ -86,4 +86,23 @@ paths:
         "500":
           description: Internal Server Error
       summary: Create Task
+  /api/v1/tasks/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Returns the task with given id
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/task.Task'
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "500":
+          description: Internal Server Error
+      summary: Get Task
 swagger: "2.0"
